<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Tasks</string>
    <string name="tasks">任务&#160;</string>
    <string name="lists">&#160;清单</string>
    <string name="todays">今日&#160;</string>
    <string name="add_list">添加任务</string>
    <string name="error_tip">什么都没有发现</string>
    <string name="success_tip">很好，今日没有待办事项</string>
    <string name="todo_of_task">总事项数：%1$d,待完成数：%2$d</string>
    <string name="tap_to_input_todo_name">输入名称</string>
    <string name="tap_to_input_todo_desc">输入描述</string>
    <string name="tap_to_chose_date">选择日期</string>
    <string name="input_name_helper">待办事项的名称，不超过10个汉字</string>
    <string name="input_desc_helper">描述该待办事项，不超过20个汉字</string>
    <string name="chose_date_helper">选择该事项计划完成的时间</string>
    <string name="input_todo_name_error">请填写待办事项的名称</string>
    <string name="input_todo_desc_error">请填写待办事项的描述</string>
    <string name="input_todo_date_error">请选择待办事项的完成时间</string>
    <string name="tap_to_input_task_name">输入清单名称</string>
    <string name="input_task_name_tip">新清单的名称，不超过10个汉字</string>
    <string name="input_task_name_error">请输入新清单的名称</string>
    <string name="parameter_error">参数错误</string>
    <string name="storage_failed">存储失败</string>
    <string name="select_theme">选择主题颜色</string>
    <string name="cancel_text">关闭</string>
    <string name="submit_text">提交</string>
    <string name="negative_text">取消</string>
    <string name="positive_text">确认</string>
    <string name="language">语言</string>
    <string name="notification">通知</string>
    <string name="about">关于</string>
    <string name="turn_on">打开</string>
    <string name="turn_off">关闭</string>
    <string-array name="languages">
        <item>跟随系统</item>
        <item>简体中文</item>
        <item>繁体中文（香港）</item>
        <item>繁体中文（台湾）</item>
        <item>英文（美国）</item>
    </string-array>

    <string name="set_language_tip">设置应用语言成功，重启后生效</string>

    <string name="notification_title">你有新的待办事项</string>
    <string name="notification_content">名称:%1$s,描述:%2$s,时间:%3$s</string>

    <string name="status_todo">待办</string>
    <string name="status_finished">已完成</string>
    <string name="status_expired">超期</string>
    <string name="status_ignored">忽略</string>
    <string name="status_tips">帮助</string>
    <string name="status_todo_tip">你还未完成该事项，请按时完成！</string>
    <string name="status_finished_tip">你已经完成该事项，恭喜！</string>
    <string name="status_expired_tip">你未按时完成该事项。</string>
    <string name="status_ignored_tip">该事项超期后，你选择了忽略该事项。</string>
    <string name="dialog_tip">提示</string>
    <string name="mark_as_finished">是否将该事项标记为已完成?</string>
    <string name="mark_as_finished_error">哎哟，由于数据库错误，标记事项为已完成操作失败，请重试！</string>
    <string name="mark_as_ignored">你未按时完成该事项，是否忽略该事项？</string>
    <string name="mark_as_ignored_error">哎哟，由于数据库错误，忽略事项操作失败，请重试！</string>
    <string name="mark_as_deleted">是否删除该事项？</string>
    <string name="mark_as_deleted_error">哎哟，由于数据库错误，删除事项操作失败，请重试！</string>
    <string name="mark_as_redo_error">哎哟，由于数据库错误，重新开启事项操作失败，请重试！</string>
    <string name="delete_task">是否删除该任务清单？</string>
    <string name="delete_task_error">哎哟，由于数据库错误，删除清单失败，请重试！</string>
    <string name="parse_data_error">数据解析错误</string>
    

    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
