<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.SettingActivity">
    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:padding="5dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/icon_back"
        android:id="@+id/btnBack"
        android:background="?android:selectableItemBackgroundBorderless"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="100dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="13sp"
            android:textColor="@color/colorPrimary"
            android:gravity="center_vertical|end"
            android:paddingEnd="20dp"
            android:id="@+id/tvLanguage"
            android:paddingStart="0dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?android:selectableItemBackground"
            android:textColor="@color/textPrimary"
            android:textSize="16sp"
            android:gravity="center_vertical"
            android:paddingStart="40dp"
            android:paddingEnd="0dp"
            android:id="@+id/btnSetLanguage"
            android:text="@string/language"/>

    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="vertical">

        <Switch
            android:id="@+id/notificationSwitcher"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:paddingEnd="20dp"
            android:paddingStart="10dp"
            android:textSize="13sp"
            android:checked="true"
            android:textColor="@color/colorPrimary"
            android:text="@string/turn_off" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?android:selectableItemBackground"
            android:textColor="@color/textPrimary"
            android:textSize="16sp"
            android:gravity="center_vertical"
            android:paddingStart="40dp"
            android:paddingEnd="0dp"
            android:id="@+id/btnSetNotification"
            android:text="@string/notification"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?android:selectableItemBackground"
            android:textColor="@color/textPrimary"
            android:textSize="16sp"
            android:gravity="center_vertical"
            android:paddingStart="40dp"
            android:paddingEnd="0dp"
            android:id="@+id/btnAbout"
            android:text="@string/about"/>
    </RelativeLayout>
</LinearLayout>